tests/sumo/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done (3ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading additional-files from 'input_additional2.add.xml' ... done (0ms).
Loading route-files incrementally from 'input_routes.rou.xml'
Loading done.
Simulation version v1_21_0+1557-fb9ec070d59 started with time: 0.00.
Simulation ended at time: 500.00.
Reason: The final simulation step has been reached.
Performance:
 Duration: 0.06s
 Real time factor: 8196.72
 UPS: 504721.311475
Vehicles:
 Inserted: 422 (Loaded: 423)
 Running: 90
 Waiting: 1
Statistics (avg of 332):
 RouteLength: 350.98
 Speed: 7.67
 Duration: 65.90
 WaitingTime: 29.73
 TimeLoss: 47.37
 DepartDelay: 0.69
